# logistic-service

./:  .env.example  .env.example  .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dep.yaml  pr.yml
src/: manage.py
src/apps/users/: admin.py  models.py
src/auth/: serializers.py  urls.py  views.py
src/config/: asgi.py  settings.py  timesumped.py  urls.py
src/custom_auth/: serializers.py  urls.py  views.py
src/inventory/: models.py
src/inventory/migrations/: 0001_initial.py
src/products/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/user_auth/: google_auth_service.py  serializers.py  urls.py  views.py
src/users/: managers.py  models.py  repositories.py  serializers.py  services.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_user_type.py  0002_alter_user_managers_remove_user_username.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_invitation_inviter.py  0003_alter_user_user_type.py  0004_alter_user_user_type.py  0005_user_is_google_auth.py
src/warehouse/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/warehouse/migrations/: 0001_initial.py  0002_warehouse_products.py
